<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_weight="10"
        android:gravity="center"
        android:ems="10"
        android:orientation="vertical"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/email_textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="36dp"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/email_textView"
        />

<!--    CHANGES: new text: Login , old text: Sign in-->

    <Button
        android:id="@+id/email_login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:layout_weight="2"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/darkGreen"
        app:layout_constraintVertical_bias="0.492" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_gravity="center"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login_button"
        tools:text=""
        />

    <TextView
        android:id="@+id/sign_up_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="12sp"
        android:layout_weight="2"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login_button"
        tools:text=""
        />
</LinearLayout>