<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">PlantAPP</string>
    <string name="botanicAppGarden">BotanicAppGarden</string>

    <string name="plants">Plants</string>
    <string name="contact_us">Contact us</string>
    <string name="home">Home</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>

    <string name="signed_in_google">Signed in with Google Successfully!</string>
    <string name="signed_in_successfully">Signed in Successfully!</string>
    <string name="auth_failed">Authentication failed!</string>

    <string name="welcome">Welcome!</string>
    <string name="or">or</string>
    <string name="read_more">Read more</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_email_id">Please enter your email id</string>
    <string name="please_enter_your_password">Please enter your password</string>

    <string name="account"><font color="@color/grey">Already have an account? </font><b><font color="@color/primaryColor">Sign in</font></b></string>
    <string name="don_t_have_an_account_sign_up"><font color="@color/grey">Don\'t have an account? </font><b><font color="@color/primaryColor">Sign up!</font></b></string>

    <string name="username_username">username.username</string>
    <string name="mail_mail_com">mail@mail.com</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>

    <!--
    <string name="openNavView">Navigation view open</string>
    <string name="closeNavView">Navigation view close</string>
    <string name="title_activity_test">test</string>
    <string name="sign_up_text">Sign up!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nothing"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="item">Item</string>
    <string name="log_in_with_google">Log in with Google</string>
    -->

</resources>
