<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- TODO: Rename the ID's to follow the standard ( Alexandra Ciocoiu )-->
    <TextView
        android:layout_width="223dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_weight="6"
        android:gravity="center"
        android:text="Welcome!"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/darkGreen"
        android:textSize="27sp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Username (ex: firstname.name)"
        android:inputType="textPersonName"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Email adress"
        android:inputType="textEmailAddress"
        app:layout_constraintVertical_bias="0.46"/>

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintVertical_bias="0.46" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:background="@drawable/gradient"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="32dp"
        android:text="@string/or"
        android:textColor="@color/darkGreen"
        android:textSize="16sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_weight="1"
        android:layout_marginTop="32dp"
        android:layout_height="40dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/regLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/account"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="32dp"
        />

</LinearLayout>